--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
     		
     		<div class="col-md-12 hidewhenmobile order-md-4" style="margin-top: 2rem">
     			<left>
-	    			<h5>The information is based on the latest compilation report by OCHA and AHA Centre. Listed activities are only taken from the report that includes minimum information that can be mapped. Will be updated on weekly basis.
-					</h5>
+	    			<p class="pmap">The information is based on the latest compilation report by OCHA and AHA Centre. Listed activities are only taken from the report that includes minimum information that can be mapped. Will be updated on weekly basis.
+					</p>
 				</center>
 	    		<div class="col-md-12 apanel" style="margin-top: 10px;">
 	    			<div class="row">
