--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 	    	}		
 
 	    	function f_drawBarSect(){
-	    		var thedata = [['Sector', 'Total',{type: 'string', role: 'annotation'}]];
+	    		var head = ['Sector', 'Total',{type: 'string', role: 'annotation'}];
 	    		var thedata = [];
 	    		for(x in sectorCount){
 	    			thedata.push([x,sectorCount[x],sectorCount[x]])
