--- a/index.html
+++ b/index.html
@@ -475,20 +475,24 @@
 	    		$.each(data,function(i,z){
 
 	    			newdata = [	z['Implementing Agency'],
-	    						z['Sector/Cluster'],
-	    						z['Activity Category'],
+	    						z['Lead Organization'],
 	    						z['Org Type'],
 	    						z['District'],
 	    						z['Sub Dstrict'],
-	    						z['Village'],
-	    						// z['Place Name'],
-	    						z['Activity'],
-	    						// z['Materials/Service Provided'],
-	    						//z['Primary Beneficiary'],
-	    						// z['# of Primary Beneficiaries'],
+	    						//z['Village'],
+	    						//z['Admin Level 5'],
+	    						z['Sector/Cluster'],
+	    						z['Sub Sector'],
 	    						z['Status'],
-	    						z['Start Date'],
-	    						z['End Date'],
+	    						z['Activity Details'],
+	    						//z['Start Date'],
+	    						//z['End Date'],
+	    						//z['Total Beneficiaries Reached'],
+	    						//z['Total Beneficiaries Planned'],
+	    						//z['Primary Beneficiary Type'],
+	    						z['# of Primary Beneficiaries'],
+	    						//z['Activity Description'],
+	    						//z['Material Provided'],
 	    					];
 	    			
     				thedatasource.push(newdata);
@@ -500,20 +504,24 @@
 	    			data: thedatasource,
 			        columns: [
 			            { title: "Implementing Agency" },
-			            { title: "Sector/Cluster" },
-			            { title: "Activity Category" },
+			            { title: "Lead Organization"},
 			            { title: "Org Type" },
 			            { title: "District" },
 			            { title: "Sub Dstrict" },
-			            { title: "Village" },
-			            // { title: "Place Name" },
-			            { title: "Activity" },
-			            // { title: "Materials/Service Provided" },
-			            // { title: "Primary Beneficiary" },
-			            // { title: "# of Primary Beneficiaries" },
+			            //{ title: "Village" },
+			            //{ title: "Admin Level 5" },
+			            { title: "Sector/Cluster" },
+			            { title: "Sub Sector" },
 			            { title: "Status" },
-			            { title: "Start Date" },
-			            { title: "End Date" },
+			            { title: "Activity Details"},
+			            //{ title: "Start Date" },
+			            //{ title: "End Date" },
+			            //{ title: "Total Beneficiaries Reached"},
+			            //{ title: "Total Beneficiaries Planned" },
+			            //{ title: "Primary Beneficiary Type" },
+			            { title: "# of Primary Beneficiaries" },
+			            //{ title: "Activity Description" },
+			            //{ title: "Material Provided" },
 			            
 			        ],
 			        responsive: true,
